// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate pipeline snapshot > api-only: worker without frontend 1`] = `
{
  "appCss": null,
  "entry": null,
  "files": [
    {
      "content": "// Generated by @fcalell/cli — do not edit.
",
      "path": "src/worker/routes/index.ts",
    },
  ],
  "html": null,
  "providers": null,
  "viteConfig": null,
  "worker": "import * as schema from "../src/schema";
import createWorker from "@fcalell/plugin-api/runtime";
import * as routes from "../src/worker/routes";
import dbRuntime from "@fcalell/plugin-db/runtime";
const worker = createWorker({ prefix: "/rpc", cors: ["https://example.com"] }).use(dbRuntime({ binding: "DB_MAIN", schema: schema })).handler(routes);
export type AppRouter = typeof worker._router;
export default worker;
",
  "wrangler": "name = "test-app"
compatibility_date = "2025-01-01"
main = "worker.ts"

[[d1_databases]]
binding = "DB_MAIN"
database_id = "abc-123"
database_name = "abc-123"
",
}
`;

exports[`generate pipeline snapshot > db-only: schema tooling, no worker/frontend 1`] = `
{
  "appCss": null,
  "entry": null,
  "files": [],
  "html": null,
  "providers": null,
  "viteConfig": null,
  "worker": null,
  "wrangler": "name = "test-app"
compatibility_date = "2025-01-01"
main = "worker.ts"

[[d1_databases]]
binding = "DB_MAIN"
database_id = "abc-123"
database_name = "abc-123"
",
}
`;

exports[`generate pipeline snapshot > frontend-only: vite + solid without worker 1`] = `
{
  "appCss": null,
  "entry": "import "./app.css";
import { render } from "solid-js/web";
import { Router } from "@solidjs/router";
import { routes } from "virtual:fcalell-routes";
import Providers from "virtual:stack-providers";
render(() => <Providers><Router>{routes}</Router></Providers>, document.getElementById("app") as HTMLElement);
",
  "files": [],
  "html": "<!doctype html>
<html lang="en">
	<head>
		<meta charset="UTF-8" >
		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
	<title>test-app</title></head>
	<body>
		<div id="app"></div>
	<script src="/entry.tsx" type="module"></script></body>
</html>
",
  "providers": null,
  "viteConfig": "import { fileURLToPath } from "node:url";
import { defineConfig } from "vite";
import { providersPlugin } from "@fcalell/plugin-vite/preset";
import solidPlugin from "vite-plugin-solid";
export default defineConfig({ root: fileURLToPath(new URL(".", import.meta.url)), publicDir: "../public", build: { outDir: "../dist/client", emptyOutDir: true }, plugins: [providersPlugin(), solidPlugin()], server: { port: 3000 } });
",
  "worker": null,
  "wrangler": null,
}
`;

exports[`generate pipeline snapshot > full-stack: db + auth + api + vite + solid + solid-ui 1`] = `
{
  "appCss": "@import "tailwindcss";
@import "@fcalell/plugin-solid-ui/globals.css";

@layer base {
:root {
	--ui-font-mono: "JetBrains Mono Variable", "JetBrains Mono Variable Fallback", ui-monospace, "Cascadia Code", "Source Code Pro", monospace;
}
}
",
  "entry": "import "./app.css";
import { render } from "solid-js/web";
import { Router } from "@solidjs/router";
import { routes } from "virtual:fcalell-routes";
import Providers from "virtual:stack-providers";
render(() => <Providers><Router>{routes}</Router></Providers>, document.getElementById("app") as HTMLElement);
",
  "files": [
    {
      "content": "// Generated by @fcalell/cli — do not edit.
",
      "path": "src/worker/routes/index.ts",
    },
  ],
  "html": "<!doctype html>
<html lang="en">
	<head>
		<meta charset="UTF-8" >
		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
	<title>test-app</title></head>
	<body>
		<div id="app"></div>
	<script src="/entry.tsx" type="module"></script></body>
</html>
",
  "providers": "import type { JSX } from "solid-js";
import { MetaProvider } from "@fcalell/plugin-solid-ui/meta";
import { Toaster } from "@fcalell/plugin-solid-ui/components/toast";
export default (props: { children: JSX.Element }) => <MetaProvider>{props.children}<Toaster /></MetaProvider>;
",
  "viteConfig": "import { fileURLToPath } from "node:url";
import { defineConfig } from "vite";
import { providersPlugin } from "@fcalell/plugin-vite/preset";
import solidPlugin from "vite-plugin-solid";
import tailwindcss from "@tailwindcss/vite";
import { themeFontsPlugin } from "@fcalell/plugin-solid-ui/node/fonts";
export default defineConfig({ root: fileURLToPath(new URL(".", import.meta.url)), publicDir: "../public", build: { outDir: "../dist/client", emptyOutDir: true }, plugins: [providersPlugin(), solidPlugin(), tailwindcss(), themeFontsPlugin([{ family: "JetBrains Mono Variable", specifier: "@fontsource-variable/jetbrains-mono/files/jetbrains-mono-latin-wght-normal.woff2", weight: "100 800", style: "normal", role: "mono", fallback: { family: "monospace", ascentOverride: "90%", descentOverride: "22%", lineGapOverride: "0%", sizeAdjust: "100%" } }])], server: { port: 3000 } });
",
  "worker": "import middleware from "../src/worker/middleware";
import * as schema from "../src/schema";
import createWorker from "@fcalell/plugin-api/runtime";
import * as routes from "../src/worker/routes";
import dbRuntime from "@fcalell/plugin-db/runtime";
import authRuntime from "@fcalell/plugin-auth/runtime";
import authCallbacks from "../src/worker/plugins/auth";
const worker = createWorker({ prefix: "/rpc", cors: ["https://example.com", "https://app.example.com", "http://localhost:3000"] }).use(dbRuntime({ binding: "DB_MAIN", schema: schema })).use(authRuntime({ secretVar: "AUTH_SECRET", appUrlVar: "APP_URL", rateLimiter: { ip: { binding: "RATE_LIMITER_IP", limit: 100, period: 60 }, email: { binding: "RATE_LIMITER_EMAIL", limit: 5, period: 300 } }, trustedOrigins: ["https://example.com", "https://app.example.com", "http://localhost:3000"], sameSite: "none", callbacks: authCallbacks })).use(middleware).handler(routes);
export type AppRouter = typeof worker._router;
export default worker;
",
  "wrangler": "name = "test-app"
compatibility_date = "2025-01-01"
main = "worker.ts"

[vars]
AUTH_SECRET = ""
APP_URL = ""

[[d1_databases]]
binding = "DB_MAIN"
database_id = "abc-123"
database_name = "abc-123"

[[unsafe.bindings]]
name = "RATE_LIMITER_IP"
type = "ratelimit"
limit = 100
period = 60

[[unsafe.bindings]]
name = "RATE_LIMITER_EMAIL"
type = "ratelimit"
limit = 5
period = 300
",
}
`;
